Use details view when looking up samples